# mediapipe-madness

./: .gitignore  README.md  drawing_stuff.py  geometry_data.py  main.py  math_stuff.py  pyproject.toml
