[project]
name = "mediapipe-madness"
version = "0.1.0"
description = "Testbench for hand and face tracking"
authors = [
    {name = "FrogBottom",email = "10749734+FrogBottom@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "mediapipe (>=0.10.35,<0.11.0)",
    "numpy (>=2.4.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
